# Haskell

./: .gitignore  README.md  main.hs  stack.yaml  utube_tutorial.hs
.stack-work/: stack.sqlite3
Cabal-Package/: CHANGELOG.md  Cabal-Package.cabal
Cabal-Package/app/: Greeting.hs
Diagrams/: Main.hs  diagrams-package.cabal
Encrypt_Char/: encrypt.hs
HackerRank/: bill-division.hs  electronic-shop.hi  electronic-shop.hs  main.hs  sales-by-match.hs
Lens/: Main.hs  lens-package.cabal  package.yaml
Reader/: reader.hi  reader.hs
Reverse_Lines/: reverseLines.hi
cabal-minimal-server/: CHANGELOG.md  ReadMe.md  cabal-minimal-server.cabal
cabal-minimal-server/app/: Main.hs
cabal-minimal-server/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: Haskell-Helper.md  Haskell_Beginner_Guide.md  Haskell_Stack_Commands.md  code_1.py  example.md
frp/: Addition.hs  Chat.hs  Counter.hs  frp.cabal
frp/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan
haskell-fundamentals-part1_2/: readme.txt
haskell-fundamentals-part1_2/1-Introduction-haskell-fundamentals-part1-m1-exercise-files/: README.txt
haskell-fundamentals-part1_2/2-Functions-haskell-fundamentals-part1-m2-exercise-files/: code.hs
haskell-fundamentals-part1_2/3-HighOrderFunctions-haskell-fundamentals-part1-m3-exercise-files/: code.hs
haskell-fundamentals-part1_2/4-Types(Type System, Polymorphism)-haskell-fundamentals-part1-m4-exercise-files/: README.txt  code.hs
(+54 files in other folders)
