cabal-version:      3.0
name:               cabal-minimal-server
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Habiba.Ahmed
maintainer:         habiba.ahmed@integrant.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cabal-minimal-server
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        servant-server,
        warp

    hs-source-dirs:   app
    default-language: Haskell2010
